# Clustering

./: CMakeLists.txt  README.md
old_results/: generate_figures.ipynb
old_results/.ipynb_checkpoints/: generate_figures-checkpoint.ipynb
old_results/results/10_threads/: gpu.csv  parallel.csv  parser.sh  sequential.csv
old_results/results/20_threads/: gpu.csv  parallel.csv  parser.sh
old_results/results/40_threads/: gpu.csv  parallel.csv
src/clustering/: CMakeLists.txt  kmeans.cpp  kmeans.cu  kmeans.h  kmeans_gpu_test.cu
test/: CMakeLists.txt
test/clustering/: kmeans_fixture.cpp  kmeans_fixture.h  kmeans_test.cpp  kmeans_test.h
test/clustering_gpu/: kmeans_test_gpu.cpp
